--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leadcms/sdk",
-  "version": "1.2.90",
+  "version": "1.2.91-pre",
   "description": "Official SDK and CLI tools for LeadCMS - framework-agnostic content management for static site generators",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
