--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,38 @@ jobs:
       - name: Run build
         run: npm run build
 
-      - name: Run tests
-        run: npm test --if-present
+      - name: Run tests with coverage
+        run: npm run test:coverage
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/lcov.info
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
+
+      - name: Upload test results
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Jest Tests (Node ${{ matrix.node-version }})
+          path: coverage/junit.xml
+          reporter: jest-junit
+          fail-on-error: true
+
+      - name: Generate test summary
+        if: success() || failure()
+        run: |
+          echo "## Test Results 🧪" >> $GITHUB_STEP_SUMMARY
+          if [ -f coverage/lcov-report/index.html ]; then
+            echo "### Coverage Report" >> $GITHUB_STEP_SUMMARY
+            echo "Coverage reports have been generated and uploaded." >> $GITHUB_STEP_SUMMARY
+          fi
+          echo "### Test Execution" >> $GITHUB_STEP_SUMMARY
+          echo "- Node.js version: ${{ matrix.node-version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Tests completed for commit: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
 
       - name: Verify CLI executable
         run: |
@@ -72,6 +102,33 @@ jobs:
           test -f scripts/inject-runtime-env.sh || (echo "❌ Shell script not created" && exit 1)
 
           echo "✅ Docker templates work correctly"
+
+  coverage-report:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests with coverage
+        run: npm run test:coverage
+
+      - name: Coverage comment
+        uses: romeovs/lcov-reporter-action@v0.3.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          lcov-file: ./coverage/lcov.info
+          delete-old-comments: true
 
   lint-and-format:
     runs-on: ubuntu-latest
