--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
   },
   "dependencies": {
     "axios": "^1.0.0",
+    "diff": "^8.0.2",
     "dotenv": "^16.0.0",
     "eventsource": "^4.0.0",
-    "gray-matter": "^4.0.3",
-    "js-yaml": "^4.1.0"
+    "gray-matter": "^4.0.3"
   },
   "devDependencies": {
+    "@types/diff": "^7.0.2",
     "@types/eventsource": "^1.1.15",
     "@types/jest": "^29.0.0",
-    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.0.0",
     "concurrently": "^9.2.1",
     "jest": "^29.0.0",
