--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leadcms/sdk",
-  "version": "1.3.0",
+  "version": "1.3.1-pre",
   "description": "Official SDK and CLI tools for LeadCMS - framework-agnostic content management for static site generators",
   "type": "module",
   "main": "dist/index.js",
