--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,9 +44,19 @@ jobs:
           echo "Package contents:"
           tar -tzf $(npm pack --silent) | head -20
 
-      - name: Update version if specified
+      - name: Check and update npm version
         if: github.event.inputs.version
-        run: npm version ${{ github.event.inputs.version }} --no-git-tag-version
+        run: |
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          TARGET_VERSION="${{ github.event.inputs.version }}"
+          echo "Current version: $CURRENT_VERSION"
+          echo "Target version: $TARGET_VERSION"
+          if [ "$CURRENT_VERSION" != "$TARGET_VERSION" ]; then
+            echo "Updating version from $CURRENT_VERSION to $TARGET_VERSION"
+            npm version $TARGET_VERSION --no-git-tag-version
+          else
+            echo "Version already set to $TARGET_VERSION. Skipping npm version."
+          fi
 
       - name: Publish to NPM
         run: npm publish --provenance --access public
