Add tests for environment variable generation and reset functions
- Implement tests for `generateEnv` function to ensure it writes the correct `__env.js` file in the public directory.
- Enhance existing tests for `filterEnvVars` and `generateEnvJsContent` to cover additional scenarios.
- Introduce new tests for `resetContentState`, `resetMediaState`, and `resetCommentsState` functions to verify they correctly delete respective directories and sync tokens without affecting other directories.
- Add integration tests for `pullContent` with `--reset` to ensure content is cleared and fresh content is pulled correctly while preserving media and comments.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "diff": "^8.0.2",
     "dotenv": "^16.6.1",
     "eventsource": "^4.0.0",
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "node-diff3": "^3.2.0"
   },
   "devDependencies": {
     "@types/diff": "^7.0.2",
